--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,56 @@
+altair==4.2.2
+astor==0.8.1
+attrs==22.2.0
+backports.zoneinfo==0.2.1
+base58==2.1.1
 beautifulsoup4==4.11.2
+blinker==1.5
+boto3==1.26.93
+botocore==1.29.93
 bs4==0.0.1
+cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.0.4
+colorama==0.4.6
+decorator==5.1.1
+entrypoints==0.4
+enum-compat==0.0.3
 et-xmlfile==1.1.0
 idna==3.4
+importlib-resources==5.12.0
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+MarkupSafe==2.1.2
 numpy==1.24.2
 openpyxl==3.1.2
+packaging==23.0
 pandas==1.5.3
+Pillow==9.4.0
+pkgutil_resolve_name==1.3.10
+protobuf==3.20.3
 pyaes==1.6.1
 pyasn1==0.4.8
+pydeck==0.8.0
+pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
 rsa==4.9
+s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.4
+streamlit==0.62.0
 Telethon==1.27.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tzdata==2022.7
+tzlocal==4.2
 urllib3==1.26.15
+validators==0.20.0
+watchdog==2.3.1
+zipp==3.15.0
