--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 altair==4.2.2
 astor==0.8.1
 attrs==22.2.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo;python_version<"3.9"
 base58==2.1.1
 beautifulsoup4==4.11.2
 blinker==1.5
