--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 altair==4.2.2
+anyio==3.6.2
 astor==0.8.1
+async-timeout==4.0.2
 attrs==22.2.0
-backports.zoneinfo;python_version<"3.9"
 base58==2.1.1
 beautifulsoup4==4.11.2
 blinker==1.5
@@ -14,21 +17,31 @@ charset-normalizer==3.1.0
 click==8.0.4
 colorama==0.4.6
 decorator==5.1.1
+distlib==0.3.6
 entrypoints==0.4
 enum-compat==0.0.3
 et-xmlfile==1.1.0
+filelock==3.10.0
+frozenlist==1.3.3
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.24.0
 idna==3.4
 importlib-resources==5.12.0
 Jinja2==3.1.2
 jmespath==1.0.1
 jsonschema==4.17.3
 MarkupSafe==2.1.2
+multidict==6.0.4
 numpy==1.24.2
 openpyxl==3.1.2
 packaging==23.0
 pandas==1.5.3
+phonenumbers==8.13.10
 Pillow==9.4.0
+pipenv==2023.2.18
 pkgutil_resolve_name==1.3.10
+platformdirs==3.1.1
 protobuf==3.20.3
 pyaes==1.6.1
 pyasn1==0.4.8
@@ -42,6 +55,7 @@ requests==2.28.2
 rsa==4.9
 s3transfer==0.6.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.4
 streamlit==0.62.0
 Telethon==1.27.0
@@ -52,4 +66,8 @@ tzdata==2022.7
 tzlocal==4.2
 urllib3==1.26.15
 validators==0.20.0
+virtualenv==20.21.0
+virtualenv-clone==0.5.7
 watchdog==2.3.1
+yarl==1.9.1
+zipp==3.15.0
